// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotTip should render a button when collapsible 1`] = `
<button
  aria-label="Open tip"
  className="nux-dot-tip"
  onClick={[Function]}
/>
`;

exports[`DotTip should render a custom label when collapsible 1`] = `
<button
  aria-label="Open tip for “Writing a Letter”"
  className="nux-dot-tip"
  onClick={[Function]}
/>
`;

exports[`DotTip should render the tip after being clicked when collapsible 1`] = `
<button
  aria-label="Close tip"
  className="nux-dot-tip"
  onClick={[Function]}
>
  <Popover
    aria-label="Editor tips"
    className="nux-dot-tip__popover"
    focusOnMount="container"
    noArrow={true}
    onClick={[Function]}
    position="middle right"
    role="dialog"
  >
    <p>
      It looks like you’re writing a letter. Would you like help?
    </p>
    <p>
      <Button
        isLink={true}
      >
        Got it
      </Button>
    </p>
    <IconButton
      className="nux-dot-tip__disable"
      icon="no-alt"
      label="Disable tips"
    />
  </Popover>
</button>
`;

exports[`DotTip should render the tip when non-collapsible 1`] = `
<div
  className="nux-dot-tip"
>
  <Popover
    aria-label="Editor tips"
    className="nux-dot-tip__popover"
    focusOnMount="container"
    noArrow={true}
    onClick={[Function]}
    position="middle right"
    role="dialog"
  >
    <p>
      It looks like you’re writing a letter. Would you like help?
    </p>
    <p>
      <Button
        isLink={true}
      >
        Got it
      </Button>
    </p>
    <IconButton
      className="nux-dot-tip__disable"
      icon="no-alt"
      label="Disable tips"
    />
  </Popover>
</div>
`;
